--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm": "^8.6.0",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-dropdown-picker": "^5.4.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
