--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -11,4 +11,8 @@ if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true")
 
     include ':react-native-splash-screen'   
     project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
+
+    include ':react-native-reanimated'
+    project(':react-native-reanimated').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-reanimated/android')
+
 }
