--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-dropdown-picker": "^5.4.0",
+    "react-native-gesture-handler": "^2.4.1",
+    "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.3.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "yup": "^0.32.11"
   },
   "devDependencies": {
