--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-native-community/datetimepicker": "^6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
@@ -20,11 +21,14 @@
     "formik": "^2.2.9",
     "install": "^0.13.0",
     "loadash": "^1.0.0",
+    "moment": "^2.29.3",
     "npm": "^8.6.0",
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-dropdown-picker": "^5.4.0",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-modalize": "^2.0.13",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
