--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'sharecost' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'sharecostTests' do
     inherit! :complete
     # Pods for testing
